--- a/stylesheets/less/transitions.less
+++ b/stylesheets/less/transitions.less
@@ -35,6 +35,11 @@ button, .button, input[type=submit] {
 }
 
 #content.single .previous .arrow, #content.single .previous a {
-		-webkit-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0); 
-		-moz-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-webkit-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-moz-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0); 
+}
+
+#hero_slideshow .slides {
+	-webkit-transition: background-position .75s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-moz-transition: background-position .75s cubic-bezier(0.02, 0, 0.18, 1.0);
 }
