--- a/stylesheets/less/global.less
+++ b/stylesheets/less/global.less
@@ -129,6 +129,35 @@
 		margin:1em 0;
 		.font-size-x-small; 
 	}
+	
+	p.xx-large {
+		.font-size-xx-large;
+	}
+	
+	p.x-large {
+		.font-size-x-large;
+	}
+	
+	p.large {
+		.font-size-large;
+	}
+	
+	p.medium {
+		.font-size-medium;
+	}
+	
+	p.small {
+		.font-size-small;
+	}
+	
+	p.x-small {
+		.font-size-x-small;
+	}
+	
+	p.xx-small {
+		.font-size-xx-small;
+	}
+	
 	p:first-child { margin-top: 0; }
 	p:last-child { margin-bottom: 0; }
 
