--- a/stylesheets/css/custom.css
+++ b/stylesheets/css/custom.css
@@ -33,28 +33,21 @@
 #content.page #info p.x-small,#content.page #other_projects p.x-small{font-size:11px;line-height:14px;}
 #content.page #info p.xx-small,#content.page #other_projects p.xx-small{font-size:10px;line-height:12px;}
 #content.page #other_projects{margin-top:30px;}#content.page #other_projects #projects_list li{margin-bottom:0;}
-#content.page #hero_slideshow .caption{font-family:'Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;font-size:11px;line-height:14px;}
-#hero_slideshow .slideshow{box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);line-height:0;}
 #work_promo{box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);background:#f0eceb;border-radius:5px;padding:10px 8px 15px 8px;}
 #content.page #iconic_info #work_promo h3{margin-top:0;}
 #download_follow{margin:15px 0;}
 #download_follow div{border-top:3px solid #f0eceb;padding:15px 0;text-align:center;}
 #download_follow small{margin-top:5px;display:block;font-size:9px !important;line-height:12px;font-weight:bold;}
-.slideshow{background:#fdfcfc;margin:0;padding:0;}
-.slideshow a,.slideshow div{line-height:0;}
-.slideshow img{margin:0;padding:0;}
-.slideshow .srd_slide{opacity:0;}
-.slideshow .srd_slide.active{opacity:1;}
-.srdslideshow_caption{font-family:'Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;}
-.srdslideshow_caption .title{font-size:11px;font-weight:bold;padding-right:10px;}
-.srdslideshow_caption .caption{font-size:11px;}
-.srdslideshow_caption .caption strong{font-weight:bold;margin-right:10px;}
-.srdslideshow_navigation{background:rgba(61, 48, 47, 0.8);display:none;position:absolute;right:20px;bottom:20px;z-index:1000;list-style:none;padding:10px;margin:0;}
-.srdslideshow_navigation li{padding:0;margin:0;float:left;margin-right:10px;font-family:'Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;background:#ded3d1;color:#3d302f;cursor:default;cursor:pointer;font-size:10px !important;font-weight:bold;text-align:center;width:20px;height:20px;line-height:20px !important;}
-.srdslideshow_navigation li:last-child{margin-right:0;}
-.srdslideshow_navigation li.active{background:#fefafa;color:#050000;}
-#hero_slideshow .slides{margin:0;padding:0;}#hero_slideshow .slides li{display:none;}
-.srd_slide{padding:0;margin:0;}
+#hero_slideshow .fss{box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);line-height:0;}
+.fss{position:relative;}
+.fss-caption{font-family:'Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;font-size:11px;line-height:14px;margin-top:15px;}
+.fss-caption strong{font-weight:bold;margin-right:10px;}
+.fss-nav{background:rgba(61, 48, 47, 0.8);display:none;position:absolute;right:20px;bottom:20px;z-index:1000;list-style:none;padding:10px;margin:0;}
+.fss-nav.active{display:block;}
+.fss .fss-nav li{float:left;display:block !important;padding:0;margin:0 10px 0 0;background:#ded3d1;color:#3d302f;cursor:pointer;font-family:'Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;font-size:10px !important;line-height:20px !important;font-weight:bold;text-align:center;width:20px;height:20px;}
+.fss-nav li:last-child{margin-right:0;}
+.fss-nav li.active{background:#fefafa;color:#050000;}
+#hero_slideshow .slides{width:725px;height:210px;margin:0;padding:0;}#hero_slideshow .slides li{display:none;}
 #projects_navigation{margin:15px 0;}
 #content.page #projects_navigation{font-family:'Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;}
 #content.page #projects_navigation dt{color:#5d504f;}
