--- a/stylesheets/less/header.less
+++ b/stylesheets/less/header.less
@@ -56,7 +56,7 @@
 						text-decoration: none;
 						height:(@row-height);
 						color: @color_off_black;
-						font-size:@x-small;
+						.font(@font-x-small, @sans-serif);
 						padding-top:0;
 					
 					}
