--- a/stylesheets/css/archive.css
+++ b/stylesheets/css/archive.css
@@ -1,13 +1,1 @@
-.font-size-xxx-large{font-size:38px;line-height:47px;}
-.font-size-xx-large{font-size:28px;line-height:35px;}
-.font-size-x-large{font-size:24px;line-height:32px;}
-.font-size-large{font-size:20px;line-height:30px;}
-.font-size-medium{font-size:17px;line-height:27px;}
-.font-size-small{font-size:13px;line-height:19px;}
-.font-size-x-small{font-size:11px;line-height:14px;}
-.font-size-xx-small{font-size:10px;line-height:12px;}
-.default-shadow{box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);}
-.reset-dimensions{margin:0;padding:0;}
-.incomplete{background-color:rgba(255, 0, 255, 0);}
-.show-bounds{background-color:rgba(255, 255, 0, 0.5);}
-@media screen, projection{#content.archive header{margin-bottom:30px;}#content.archive header h1{margin-bottom:0;} #content.archive header h2{margin-top:0;color:#5d504f;font-size:13px;line-height:19px;font-family:Georgia,"Times New Roman",Times,serif;font-style:italic;}}
+.font-size-xxx-large{font-size:38px;line-height:47px}.font-size-xx-large{font-size:28px;line-height:35px}.font-size-x-large{font-size:24px;line-height:32px}.font-size-large{font-size:20px;line-height:30px}.font-size-medium{font-size:17px;line-height:27px}.font-size-small{font-size:13px;line-height:19px}.font-size-x-small{font-size:11px;line-height:14px}.font-size-xx-small{font-size:10px;line-height:12px}.default-shadow{box-shadow:0 0 8px rgba(18,7,6,0.3)}.reset-dimensions{margin:0;padding:0}.incomplete{background-color:rgba(255,0,255,0)}.show-bounds{background-color:rgba(255,255,0,0.5)}@media screen,projection{#content.archive header{margin-bottom:30px}#content.archive header h1{margin-bottom:0}#content.archive header h2{margin-top:0;color:#5d504f;font-size:13px;line-height:19px;font-family:Georgia,"Times New Roman",Times,serif;font-style:italic}}
