--- a/stylesheets/css/forms.css
+++ b/stylesheets/css/forms.css
@@ -1,13 +1,1 @@
-.font-size-xxx-large{font-size:38px;line-height:47px;}
-.font-size-xx-large{font-size:28px;line-height:35px;}
-.font-size-x-large{font-size:24px;line-height:32px;}
-.font-size-large{font-size:20px;line-height:30px;}
-.font-size-medium{font-size:17px;line-height:27px;}
-.font-size-small{font-size:13px;line-height:19px;}
-.font-size-x-small{font-size:11px;line-height:14px;}
-.font-size-xx-small{font-size:10px;line-height:12px;}
-.default-shadow{box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);}
-.reset-dimensions{margin:0;padding:0;}
-.incomplete{background-color:rgba(255, 0, 255, 0);}
-.show-bounds{background-color:rgba(255, 255, 0, 0.5);}
-@media screen, projection{label{font-family:'Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;font-size:13px;line-height:19px;font-weight:bold;} input[type=text],textarea{font-size:13px;line-height:19px;border:1px solid #5d504f;font-family:'Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;color:#5d504f;padding:3px 4px;font-size:13px;line-height:19px;box-shadow:inset 0px 0px 5px rgba(18, 7, 6, 0.2);border-radius:2px;} input[type=text]:focus,textarea:focus{border:1px solid #050000;box-shadow:inset 0px 0px 5px rgba(18, 7, 6, 0.1);}}
+.font-size-xxx-large{font-size:38px;line-height:47px}.font-size-xx-large{font-size:28px;line-height:35px}.font-size-x-large{font-size:24px;line-height:32px}.font-size-large{font-size:20px;line-height:30px}.font-size-medium{font-size:17px;line-height:27px}.font-size-small{font-size:13px;line-height:19px}.font-size-x-small{font-size:11px;line-height:14px}.font-size-xx-small{font-size:10px;line-height:12px}.default-shadow{box-shadow:0 0 8px rgba(18,7,6,0.3)}.reset-dimensions{margin:0;padding:0}.incomplete{background-color:rgba(255,0,255,0)}.show-bounds{background-color:rgba(255,255,0,0.5)}@media screen,projection{label{font-family:'Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;font-size:13px;line-height:19px;font-weight:bold}input[type=text],textarea{font-size:13px;line-height:19px;border:1px solid #5d504f;font-family:'Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;color:#5d504f;padding:3px 4px;font-size:13px;line-height:19px;box-shadow:inset 0 0 5px rgba(18,7,6,0.2);border-radius:2px}input[type=text]:focus,textarea:focus{border:1px solid #050000;box-shadow:inset 0 0 5px rgba(18,7,6,0.1)}}
