--- a/stylesheets/css/ie.css
+++ b/stylesheets/css/ie.css
@@ -1,30 +1,1 @@
-.font-size-xxx-large{font-size:38px;line-height:47px;}
-.font-size-xx-large{font-size:28px;line-height:35px;}
-.font-size-x-large{font-size:24px;line-height:32px;}
-.font-size-large{font-size:20px;line-height:30px;}
-.font-size-medium{font-size:17px;line-height:27px;}
-.font-size-small{font-size:13px;line-height:19px;}
-.font-size-x-small{font-size:11px;line-height:14px;}
-.font-size-xx-small{font-size:10px;line-height:12px;}
-.default-shadow{box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);}
-.reset-dimensions{margin:0;padding:0;}
-.incomplete{background-color:rgba(255, 0, 255, 0);}
-.show-bounds{background-color:rgba(255, 255, 0, 0.5);}
-#top_bar{background:#050000;}
-#content.single{padding-bottom:45px;}
-#content.home #content_secondary .post.post-4,#content.home #content_tertiary .post.post-4{margin-right:0;}
-#page_footer .widget-1,#page_heel .widget-1,#sub_header .widget-1,#post_footer .widget-1,#page_footer .widget-4,#page_heel .widget-4,#sub_header .widget-4,#post_footer .widget-4,#page_footer .widget-7,#page_heel .widget-7,#sub_header .widget-7,#post_footer .widget-7{clear:left;width:470px;}
-#page_footer .widget-3,#page_heel .widget-3,#sub_header .widget-3,#post_footer .widget-3,#page_footer .widget-6,#page_heel .widget-6,#sub_header .widget-6,#post_footer .widget-6,#page_footer .widget-9,#page_heel .widget-9,#sub_header .widget-9,#post_footer .widget-9{margin-right:0;}
-#page_heel .widget-2{margin-right:0;}
-#sidebar{background:#fffefe;}
-#sticky_footer{background:#3d302f;}
-#sticky_footer.light{background:#f0eceb;}
-#comments_container #commentform label{display:block;}
-#comments_container #commentform #comment_form_info label{text-align:right;}
-#comments_container #commentform #comment_form_info input[type=text]{margin-bottom:15px;}
-#comments_container #commentform textarea{height:137px;}
-#comment_form_comment dl{text-align:left;}
-.clear:after{content:".";display:block;clear:both;visibility:hidden;line-height:0;height:0;}
-.clear{display:inline-block;}
-html[xmlns] .clear{display:block;}
-* html .clear{height:1%;}
+.font-size-xxx-large{font-size:38px;line-height:47px}.font-size-xx-large{font-size:28px;line-height:35px}.font-size-x-large{font-size:24px;line-height:32px}.font-size-large{font-size:20px;line-height:30px}.font-size-medium{font-size:17px;line-height:27px}.font-size-small{font-size:13px;line-height:19px}.font-size-x-small{font-size:11px;line-height:14px}.font-size-xx-small{font-size:10px;line-height:12px}.default-shadow{box-shadow:0 0 8px rgba(18,7,6,0.3)}.reset-dimensions{margin:0;padding:0}.incomplete{background-color:rgba(255,0,255,0)}.show-bounds{background-color:rgba(255,255,0,0.5)}#top_bar{background:#050000}#content.single{padding-bottom:45px}#content.home #content_secondary .post.post-4,#content.home #content_tertiary .post.post-4{margin-right:0}#page_footer .widget-1,#page_heel .widget-1,#sub_header .widget-1,#post_footer .widget-1,#page_footer .widget-4,#page_heel .widget-4,#sub_header .widget-4,#post_footer .widget-4,#page_footer .widget-7,#page_heel .widget-7,#sub_header .widget-7,#post_footer .widget-7{clear:left;width:470px}#page_footer .widget-3,#page_heel .widget-3,#sub_header .widget-3,#post_footer .widget-3,#page_footer .widget-6,#page_heel .widget-6,#sub_header .widget-6,#post_footer .widget-6,#page_footer .widget-9,#page_heel .widget-9,#sub_header .widget-9,#post_footer .widget-9{margin-right:0}#page_heel .widget-2{margin-right:0}#sidebar{background:#fffefe}#sticky_footer{background:#3d302f}#sticky_footer.light{background:#f0eceb}#comments_container #commentform label{display:block}#comments_container #commentform #comment_form_info label{text-align:right}#comments_container #commentform #comment_form_info input[type=text]{margin-bottom:15px}#comments_container #commentform textarea{height:137px}#comment_form_comment dl{text-align:left}.clear:after{content:".";display:block;clear:both;visibility:hidden;line-height:0;height:0}.clear{display:inline-block}html[xmlns] .clear{display:block}* html .clear{height:1%}
