--- a/stylesheets/less/footer.less
+++ b/stylesheets/less/footer.less
@@ -3,8 +3,7 @@
 @media screen, projection {
 	#page_footer 
 	{
-		padding-top: (@row-height*2);
-		padding-bottom: (@row-height*2);
+		padding: (@row-height*2) 0;
 		color: @color_light;
 		a { color: @color_highlight; }
 		h3 { 
@@ -12,7 +11,6 @@
 			.font-size-small;
 			margin-bottom:5px;
 			color: @color_light;
-			font-family:@sans-serif;
 		}
 		.widget {
 			float:left;
