--- a/stylesheets/less/transitions.less
+++ b/stylesheets/less/transitions.less
@@ -9,16 +9,6 @@ nav li.rss, nav li.twitter {
 	-moz-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
 }
 
-#sticky_footer {
-	-webkit-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-moz-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	
-	.widget {
-		-webkit-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0); 
-		-moz-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	}
-}
-
 #comment_form_comment textarea {
 	-webkit-transition: height .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
 	-moz-transition: height .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
@@ -42,4 +32,12 @@ button, .button, input[type=submit] {
 #hero_slideshow .slides {
 	-webkit-transition: background-position .75s cubic-bezier(0.02, 0, 0.18, 1.0); 
 	-moz-transition: background-position .75s cubic-bezier(0.02, 0, 0.18, 1.0);
+}
+
+#projects_list li {
+	-webkit-transition: opacity .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-moz-transition: opacity .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-o-transition: opacity .3s cubic-bezier(0.02, 0, 0.18, 1.0);
+	-webkit-transition: box-shadow .2s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-moz-transition: box-shadow .2s cubic-bezier(0.02, 0, 0.18, 1.0);
 }
